Add a GTK support routine that returns a simulated nativeKeyCode for a given windowKeyCode.  Simulated since there's no keyboard attached when testing in webkit DRT, so DRT::eventSender.keyDown() must simulate keyboard events.

https://bugs.webkit.org/show_bug.cgi?id=66679

BUG=94211
TEST=webkit LayoutTests/plugins/keyboard-events.html

Review URL: http://codereview.chromium.org/7740048

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@98599 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 80afbdbf6432bae199da3ef53dc02de7160585cc